tests/tooling/fixtures/native/execution/positive/message_send_numeric_nonzero_receiver_fast_path.objc3
module MessageSendNumericNonzeroReceiverFastPath;

fn main() -> i32 {
  return [7 ping];
}
