tests/tooling/fixtures/native/execution/negative/module_duplicate_declaration.objc3
module ModuleDuplicateDeclaration;
module ModuleDuplicateDeclarationSecond;

fn main() -> i32 {
  return 0;
}
